--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,13 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components": ["./src/components"],
+      "@/utils/hooks": ["./src/utils/hooks"],
+      "@/utils/lib/actions": ["./src/utils/lib/actions"],
+      "@/utils/lib/helpers": ["./src/utils/lib/helpers"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
